serghei-237576-0.out
  File "/work/jovillalobos/hidrologia/DischargeForecastingDL/experiments.py", line 10
    elif model == "ltcn"
                        ^
SyntaxError: expected ':'

  File "/work/jovillalobos/hidrologia/DischargeForecastingDL/experiments.py", line 10
    elif model == "ltcn"
                        ^
SyntaxError: expected ':'

  File "/work/jovillalobos/hidrologia/DischargeForecastingDL/experiments.py", line 10
    elif model == "ltcn"
                        ^
SyntaxError: expected ':'

  File "/work/jovillalobos/hidrologia/DischargeForecastingDL/experiments.py", line 10
    elif model == "ltcn"
                        ^
SyntaxError: expected ':'

ERROR conda.cli.main_run:execute(125): `conda run python experiments.py ltcn` failed. (See above for error)
ERROR conda.cli.main_run:execute(125): `conda run python experiments.py lstm` failed. (See above for error)
ERROR conda.cli.main_run:execute(125): `conda run python experiments.py ltcn` failed. (See above for error)
ERROR conda.cli.main_run:execute(125): `conda run python experiments.py lstm` failed. (See above for error)
srun: error: nukwa-01.cnca: task 1: Exited with exit code 1
srun: error: nukwa-01.cnca: task 1: Exited with exit code 1
srun: error: nukwa-00.cnca: task 0: Exited with exit code 1
srun: error: nukwa-00.cnca: task 0: Exited with exit code 1
